feat: add tagId in quizz parameter
