# docs/swagger.json
@@ -56,6 +56,14 @@
                     "Quiz"
                 ],
                 "summary": "Get all quizzes",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tag ID",
+                        "name": "tag_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
